--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "supervisor": "supervisor ./bin/www",
+    "cron": "node cron.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +13,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "redis": "^4.6.14"
   }
 }
