--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "request": "^2.88.2"
   }
 }
