--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "supervisor": "supervisor ./bin/www",
+    "start": "supervisor ./bin/www || node ./bin/www",
     "cron": "node cron.js"
   },
   "dependencies": {
